--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="nav-signin border">
-                <p><span>Hello, sign in</span></p>
+                <p><span>Hello there, sign in</span></p>
                 <p class="nav-second">Account & Lists</p>
             </div> 
 
